--- a/senpick/static/css/style.css
+++ b/senpick/static/css/style.css
@@ -62,6 +62,7 @@ button {
 
 
 .card-wrapper {
+  margin-top: 8px;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
@@ -80,7 +81,10 @@ button {
   font-family: sans-serif;
   background: #FFFFFF;
   padding: 12px;
-  height: fit-content;
+}
+
+.chat-window .product-card {
+  width: 130px;
 }
 
 .product-card:hover {
