--- a/senpick/app/templates/pswd_verif.html
+++ b/senpick/app/templates/pswd_verif.html
@@ -18,14 +18,16 @@
   <div class="background">
     <!-- 왼쪽 카드 (배경 역할만) -->
     <div class="left-card">
-      <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo">
+      <div class="logo-wrapper">
+        <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo">
+      </div>
       <div class="step-indicator">
         <span class="dot active"></span>
         <span class="dot active"></span>
         <span class="dot"></span>
       </div>
-      <div class="outer-wrapper">
-        <div class="login-wrapper">
+      <div class="outer-pswd-wrapper">
+        <div class="pswd-wrapper">
           <div class="text-block">
             <h2 class="main-title">이메일 인증</h2>
             <p class="sub-title">이메일로 받은 인증번호 5자리를 입력해주세요.</p>
