--- a/senpick/static/css/profile_info.css
+++ b/senpick/static/css/profile_info.css
@@ -317,7 +317,7 @@
   width: 100%;
   font-size: 16px;
   /* font-weight: bold; */
-  color: black;
+  color: #2e2e2e;
   background-color: #F5F5F8;
   border: none;
   border-radius: 8px;
