--- a/senpick/app/templates/login.html
+++ b/senpick/app/templates/login.html
@@ -63,7 +63,12 @@
           
           <div class="social-login">
             <img src="{% static 'images/kakao_login.svg' %}" alt="카카오 로그인">
-            <img src="{% static 'images/google_login.svg' %}" alt="구글 로그인">
+            <form method="post" action="/accounts/google/login/">
+              {% csrf_token %}
+              <button type="submit" style="border: none; background: none; padding: 0;">
+                <img src="{% static 'images/google_login.svg' %}" alt="구글 로그인">
+              </button>
+            </form>
             <form method="post" action="/accounts/naver/login/">
               {% csrf_token %}
               <button type="submit" style="border: none; background: none; padding: 0;">
