--- a/senpick/static/css/signup.css
+++ b/senpick/static/css/signup.css
@@ -414,6 +414,7 @@ input[type="terms"].error {
 
 .verify-input {
   width: calc(100% / 5 - 8px);
+  height: 99px !important;
   aspect-ratio: 1 / 1;
   background: var(--white);
   border: 1px solid var(--gray-medium);
