--- a/senpick/app/templates/login.html
+++ b/senpick/app/templates/login.html
@@ -59,17 +59,16 @@
             {% csrf_token %}
             <button type="submit" class="guest-btn">비회원으로 시작하기</button>
           </form>
-          
           <div class="social-login">
-            {% comment %} <form method="post" action="/accounts/naver/login/">
+            <img src="{% static 'images/kakao_login.svg' %}" alt="카카오 로그인" id="kakaoLoginBtn"> 
+            <img src="{% static 'images/google_login.svg' %}" alt="구글 로그인" id="googleLoginBtn">
+            {% comment %} <img src="{% static 'images/naver_login.svg' %}" alt="네이버 로그인" id="naverLoginBtn"> {% endcomment %}
+            <form method="post" action="/accounts/naver/login/">
               {% csrf_token %}
               <button type="submit" style="border: none; background: none; padding: 0;">
                 <img src="{% static 'images/naver_login.svg' %}" alt="네이버 로그인">
               </button>
-            </form> {% endcomment %}
-            <img src="{% static 'images/kakao_login.svg' %}" alt="카카오 로그인" id="kakaoLoginBtn"> 
-            <img src="{% static 'images/google_login.svg' %}" alt="구글 로그인" id="googleLoginBtn">
-            <img src="{% static 'images/naver_login.svg' %}" alt="네이버 로그인" id="naverLoginBtn">
+            </form>
           </div>
 
           <div class="link-row">
