--- a/senpick/app/templates/signup/signup_step4.html
+++ b/senpick/app/templates/signup/signup_step4.html
@@ -46,7 +46,7 @@
               </div>
               <div id="style-error" class="error-message"></div>
 
-              <p class="section-title" style="margin-top: 32px;">
+              <p class="section-title">
                 선호 카테고리 <span class="subtext">(최대 3개 선택)</span>
               </p>
               <div class="options-group category-group">
@@ -64,7 +64,7 @@
 
               <input type="hidden" name="preference_ids" id="preference-ids" value="">
 
-              <button type="submit" id="completeBtn" class="verify-btn" style="margin-top: 48px;">
+              <button type="submit" id="completeBtn" class="verify-btn">
                 회원가입 완료
               </button>
             </form>
