--- a/senpick/static/css/login.css
+++ b/senpick/static/css/login.css
@@ -147,7 +147,7 @@ input.error#password + .error-message ~ .login-btn {
 .error-message {
   font-size: 12px;
   color: #EB1C24;
-  visibility: hidden;
+  display: none;
   margin-top: 2px;
 }
 
@@ -253,13 +253,13 @@ input.error#password + .error-message ~ .login-btn {
   border-radius: 8px;
   z-index: 1000;
   opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  display: none;
+  transition: opacity 0.3s ease-in-out;
   font-size: 1.2em;
   text-align: center;
 }
 
 .coming-soon-popup.show {
   opacity: 1;
-  visibility: visible;
+  display: block;
 }
