--- a/senpick/static/css/signup.css
+++ b/senpick/static/css/signup.css
@@ -92,9 +92,6 @@ body {
 
 
 .outer-wrapper.scrollable-content {
-  bottom: 0;
-  left: 0;
-  right: 0;
   overflow-y: auto; 
   padding: 200px 30px 30px 30px;
   -webkit-overflow-scrolling: touch; 
@@ -163,15 +160,9 @@ input[type="terms"].error {
     color: var(--error); 
     margin-top: 5px; 
     margin-bottom: 10px; 
-    visibility: hidden; 
-    height: 0;
+    display: none;;
     overflow: hidden; 
-    transition: height 0.3s ease-out, visibility 0.3s ease-out; 
-}
-
-.error-message[style*="visibility: visible"] {
-    height: auto; 
-    /* overflow: visible; */ 
+    transition: height 0.3s ease-out; 
 }
 
 
@@ -181,10 +172,10 @@ input[type="terms"].error {
   margin-top: -15px;
 }
 
-#terms-error {
+.terms-box #terms-error {
   color: var(--error);
   font-size: 12px;
-  margin-top: -45px;
+  margin-top: 3px; 
 }
 
 .terms-box {
